<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical">

<TextView android:text="@string/currentTrips" android:id="@+id/currentTripTextView01" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
<ListView android:id="@+id/taskListListView" android:layout_width="wrap_content" android:layout_height="wrap_content"></ListView>



<LinearLayout android:id="@+id/LinearLayout03" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">  

<Button android:text="@string/newTrip" android:id="@+id/newTripButton1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="25sp"></Button>


<Button android:text="@string/menuNameUserManagement" android:id="@+id/userManagementButton1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25sp"></Button>

</LinearLayout>
</LinearLayout>
