<?xml version="1.0" encoding="utf-8"?>
<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content" android:stretchColumns="1">
	<TableRow android:id="@+id/TableRow01" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:text="@string/username" android:id="@+id/TextView01"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<EditText android:text="" android:id="@+id/newUserNameEditText"
			android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
	</TableRow>
	<TableRow android:id="@+id/TableRow02" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:text="@string/email" android:id="@+id/TextView02"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<EditText android:text="" android:id="@+id/newUserEmailEditText"
			android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
	</TableRow>
	<TableRow android:id="@+id/TableRow03" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button android:text="@string/add" android:id="@+id/addUserButton"
			android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
	</TableRow>
</TableLayout>
