<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	android:orientation="vertical">

	<TableLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TableRow>
			<TextView android:text="@string/tripName" android:id="@+id/tripNameTextView01"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		</TableRow>
		<TableRow>
			<TextView android:text="" android:id="@+id/tripNameTextView"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginLeft="20sp" android:singleLine="false" ></TextView>
		</TableRow>
	</TableLayout>
	<TableLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TableRow>
			<TextView android:text="@string/tripMembers" android:id="@+id/tripMembersTextView03"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		</TableRow>
		<TableRow>
			<TextView android:text="" android:id="@+id/tripMembersTextView"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginLeft="20sp" android:singleLine="false" ></TextView>
		</TableRow>
		<TableRow>
			<TextView android:text="@string/listExpense" android:id="@+id/listExpenseTextView03"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		</TableRow>
	</TableLayout>
	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
		<ListView android:id="@+id/expenseListListView" android:layout_width="wrap_content" 
			android:layout_height="wrap_content" android:layout_marginLeft="20sp"></ListView>

	</LinearLayout>

</LinearLayout>